# book-checker

./: .env.example  .gitignore  pyproject.toml
docs/: README.md  architecture.md  implementation-plan.md  milestones.md
scripts/: test_library.py  test_open_library.py  test_vision.py
src/book_checker/: config.py  library_client.py  models.py  open_library.py  vision.py
